--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+body {
+  @apply bg-slate-950;
+  @apply text-slate-100;
+  @apply max-w-4xl;
+  @apply mx-auto;
+  @apply p-3;
+}
